Perkin-UAT/force-app/main/default/objects/Strategic_Deals__c/Strategic_Deals__c.object-meta.xml
<CustomObject>
    <description>The goal is to have sales reps flag opportunities as Competitive, get a support team involved and create a solution to win the order.</description>
    <label>Strategic Deal</label>
    <nameField>
        <label>Strategic Deals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>