Perkin-UAT/force-app/main/default/objects/Strategic_Deals__c/fields/Chance_Of_Winning__c.field-meta.xml
<CustomField>
    <fullName>Chance_Of_Winning__c</fullName>
    <description>What Is The Chance Of Winning At The Current Discount?</description>
    <label>Chance Of Winning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>