Perkin-UAT/force-app/main/default/objects/Strategic_Deals__c/fields/Competitive__c.field-meta.xml
<CustomField>
    <fullName>Competitive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitive</label>
    <type>Checkbox</type>
</CustomField>