Perkin-UAT/force-app/main/default/objects/Strategic_Deals__c/fields/Which_Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Which_Competitor_Product__c</fullName>
    <description>What Competitor Product Are You Competing Against?</description>
    <label>Which Competitor Product?</label>
    <type>TextArea</type>
</CustomField>